[package]
name = "recert"
# The rust-version field is an optional key that tells cargo what version of the Rust toolchain you support for your package (https://doc.rust-lang.org/cargo/reference/rust-version.html)
# This is important for a few reasons:
#   1. It affects the output of cargo lockfiles
#       - https://github.com/rust-lang/cargo/pull/12861
#       - https://github.com/rust-lang/cargo/issues/13503
#   2. It affects what runtime version the compiled code is compatible with
# This version should match what is available and used in the production runtime container (.konflux/Dockerfile)
rust-version = "1.75"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0.93", features = ["preserve_order"] }
serde_yaml = "0.9.22"
glob = "0.3.1"
base64 = "0.21.0"
pem = "3.0.2"
x509-certificate = "0.21.0"
lazy_static = "1.4.0"
rsa = "0.9.0"
pkcs1 = "0.7.5"
bytes = "1.4.0"
etcd-client = { version = "0.12.1" }
tokio = { version = "1.28.2", features = ["full"] }
ring = "0.17.5"
bcder = "0.7.1"
async-trait = "0.1.68"
futures-util = "0.3.28"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.6"
serde = { version = "1.0.163", features = ["rc", "derive"] }
clap = { version = "4.4.2", features = ["derive"] }
p256 = "0.13.2"
tempfile = "3.5.0"
regex = "1.8.3"
anyhow = "1.0.71"
lazy-regex = "3.0.2"
thiserror = "1.0.40"
x509-cert = "0.2.3"
der = "0.7.6"
url = "2.4.0"
sha1 = "0.10.5"
fn-error-context = "0.2.1"
strum = "0.25.0"
strum_macros = "0.25.2"
simple_asn1 = "0.6.2"
num-bigint = "0.4.3"
chrono = "0.4.26"
libc = "0.2.147"
clio = { version = "0.3.4", features = ["clap", "clap-parse"] }
data-url = "0.3.0"
prost = "0.12.1"
log = "0.4.20"
itertools = "0.12.1"
serial_test = "3.0.0"
aes-gcm = "0.10.3"
dyn-clone = "1.0.17"
hex = "0.4.3"
serde_with = { version = "3.11.0", features = ["base64"] }

[build-dependencies]
prost-build = "0.12.1"

[features]
generate = []

# See https://github.com/coreos/cargo-vendor-filterer
[package.metadata.vendor-filter]
# NOTE: Change x86_64 to * to include all platforms
platforms = ["x86_64-unknown-linux-gnu"]
tier = "2"
all-features = true
